--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                   <h5>Phaser, JavaScript, 3 person team</h5>
                   <h6>5/2023</h6>
                   <p>
-                    Browser Game Made in phaser as a project for University, I can be played by pressing the "Play" button below. 
+                    Browser Game Made in Phaser as a project for University, I can be played by pressing the "Play" button below. 
                     I was in charge of all the programming in the game, excluding sound and music.
                   </p>
                   <div>
