Added Skull Killer

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class="col-md-6">
                 <div class="left-text">
                   <h4>Gauntlet Remastered</h4>
-                  <h5>Godot, C#, Solo project, Asset creation</h5>
+                  <h5>Godot, C#, Solo project, University Assignment, Asset creation</h5>
                   <h6>10/2024</h6>
                   <p>
                     This is my newest project right now. It's an arcade roguelike based on the classic game Gauntlet, with new mechanics and a new 3D art style. 
@@ -246,7 +246,7 @@
               <div class="col-md-6">
                 <div class="left-text">
                   <h4>CityScapee</h4>
-                  <h5>Unity, C#, Solo Project, Optimization techniques</h5>
+                  <h5>Unity, C#, Solo Project, University Assignment, Optimization techniques</h5>
                   <h6>4/2024</h6>
                   <p>
                     Short parkour game made in Unity. The main focus of this project was to learn about optimization techniques, such as occlusion culling and level of detail.
@@ -301,7 +301,7 @@
               <div class="col-md-6">
                 <div class="left-text">
                   <h4>Teresa: From black to green</h4>
-                  <h5>Unity, C#, 3 person team</h5>
+                  <h5>Unity, C#, 3 person team, University Assignment</h5>
                   <h6>12/2023</h6>
                   <p>
                     Game developed for the town hall of Teresa, a small town in the province of Castellón, Spain.
@@ -355,7 +355,7 @@
               <div class="col-md-6">
                 <div class="left-text">
                   <h4>SkullKiller</h4>
-                  <h5>Phaser, JavaScript, 3 person team</h5>
+                  <h5>Phaser, JavaScript, 3 person team, University Assignment</h5>
                   <h6>5/2023</h6>
                   <p>
                     Browser Game Made in Phaser as a project for University, I can be played by pressing the "Play" button below. 
