--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="third-service-icon service-icon"></div>
                 <h4>Fast Learner</h4>
                 <p>
-                  I am not afraid to ask questions and I am always looking for ways to improve. I love recieving feedback and I am always looking for ways to grow as a developer.
+                  I am not afraid to ask questions and I am always looking for ways to improve. I love receiving feedback and I am always looking for ways to grow as a developer.
                 </p>
               </div>
             </div>
