--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
                 <li><a href="#section1">About Me</a></li>
-                <li><a href="#section2">What I’m good at</a></li>
+                <li><a href="#section2">What I'm good at</a></li>
                 <li><a href="#section3">My Work</a></li>
                 <li><a href="#section4">Contact Me</a></li>
               </ul>
@@ -124,7 +124,7 @@
                 <div class="second-service-icon service-icon"></div>
                 <h4>Team Player</h4>
                 <p>
-                  I have worked with teams that range from 1 to 15 people of different disciplines. Throught this, I have developed the ability to communicate and work effectively with others.
+                  I have worked with teams that range from 1 to 15 people of different disciplines. Through this, I have developed the ability to communicate and work effectively with others.
                 </p>
               </div>
             </div>
