--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <h2>Contact Me</h2>
             <div class="line-dec"></div>
             <span>
-              Feel free to send me any inquiries or feedback you may have at the adress below. I'll be happy to answer them!
+              Feel free to send me any inquiries or feedback you may have at the address below. I'll be happy to answer them!
               <br>
               <div class="emailimage">
                 <img src="assets/images/email.jpg" alt="" />
