--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/left-image.jpg" alt="" />
+                  <img src="assets/images/foto.jpg" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
@@ -112,7 +112,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
-                <div class="first-service-icon service-icon"></div>
+                <div class="service-icon"><i class="fa-regular fa-file-lines fa-2xl"></i></div>
                 <h4>C#, JavaScript, C++</h4>
                 <p>
                   And many more! I have experience in a wide variety of programming languages and tools, including Unity, Unreal Engine, Godot and Phaser.
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="second-service-icon service-icon"></div>
+                <div class="service-icon"><i class="fa-solid fa-user-plus fa-2xl"></i></div>
                 <h4>Team Player</h4>
                 <p>
                   I have worked with teams that range from 1 to 15 people of different disciplines. Through this, I have developed the ability to communicate and work effectively with others.
@@ -130,7 +130,7 @@
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="third-service-icon service-icon"></div>
+                <div class="service-icon"><i class="fa-solid fa-graduation-cap fa-2xl"></i></div>
                 <h4>Fast Learner</h4>
                 <p>
                   I am not afraid to ask questions and I am always looking for ways to improve. I love receiving feedback and I am always looking for ways to grow as a developer.
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-6">
               <div class="service-item">
-                <div class="fourth-service-icon service-icon"></div>
+                <div class="service-icon"><i class="fa-regular fa-comments fa-2xl"></i></div>
                 <h4>Plurilingual</h4>
                 <p>
                   I've had the amazing privilege of being able to travel a lot, which has allowed me to gain fluency in Spanish, English and Catalan. I'm also currently learning Japanese.
