--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     I love getting to explore and learn about new and exciting worlds.
                     I also love getting challenged and testing my strategic thinking.<br><br>
                     Because of this, my favourite genres are exploration and strategy.<br><br>
-                    My favourite games of all time include <i>Subnautica, Hollow Knight, Undertale, Control, Bloons TD, Battlerite</i> and <i>League of Legends</i> among many, many others.
+                    My favourite games of all time include <i>Subnautica, Hollow Knight, Kirby Super Star Ultra, Undertale, Control, Bloons TD, Battlerite</i> and <i>League of Legends</i> among many, many others.
                     <br><br>
                     My greatest dream is to be able to give back to world by creating games that inspire and bring joy to others, as these games have done for me.
                   </p>
