Added Tank Battle

--- a/index.html
+++ b/index.html
@@ -163,11 +163,39 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
+                  <h4>Tank Battle</h4>
+                  <h5>Unity, C#, Solo project, University Assignment, Multiplayer System</h5>
+                  <h6>10/2024</h6>
+                  <p>
+                    This is my newest project right now. It's a short test project for Unity's multiplayer system. 
+                    It's a tank battle arena where players run around a procedurally generated map grabbing ammo to fight each other with.
+                  </p>
+                  <div>
+                    <span class="white-button">
+                      <a href="https://kiskidiego.itch.io/tank-battle" target="_blank" rel="noopener noreferrer">Download</a>
+                    </span>
+                    <span class="white-button">
+                      <a href="https://github.com/kiskidiego/TankBattle" target="_blank" rel="noopener noreferrer">Source</a>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-image">
+                  <img src="assets/images/tankbattle-screencap.PNG" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
                   <h4>Gauntlet Remastered</h4>
                   <h5>Godot, C#, Solo project, University Assignment, Asset creation</h5>
                   <h6>10/2024</h6>
                   <p>
-                    This is my newest project right now. It's an arcade roguelike based on the classic game Gauntlet, with new mechanics and a new 3D art style. 
+                    This is an arcade roguelike based on the classic game Gauntlet, with new mechanics and a new 3D art style. 
                     Every asset in the game was made by me, it took me about two weeks to complete and it's fully playable.
                   </p>
                   <div>
