--- a/index.html
+++ b/index.html
@@ -163,19 +163,20 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div class="left-text">
-                              <h4>Tank Battle</h4>
-                              <h5>Unity, C#, Solo project, University Assignment, Multiplayer System</h5>
+                              <h4>Fitoons</h4>
+                              <h5>Unity, C#, Team Project, Internship, Multiplayer System, Motion Capture</h5>
                               <h6>10/2024</h6>
                               <p>
-                                  This is a short test project for Unity's Netcode for GameObjects system.
-                                  It's a tank battle arena where players run around a procedurally generated map grabbing ammo to fight each other with.
+                                  This is the project I wworked on during my internship at the Institue of New Imaging Technologies at Jaume I University.
+                                  It's a multiplayer racing game where players control a character using motion capture while running on a treadmill.
+                                  The game is designed to be played in a gym, and the goal is to promote physical activity and healthy habits.
+                                  I was in charge of the multiplayer system, which was implemented using Fish Networking.
+                                  Below is a forked version of the project, which is the one I worked on.
+                                  <br><i>(Note: The game is not available for download yet, as it is still in development)</i>
                               </p>
                               <div>
                                   <span class="white-button">
-                                      <a href="https://kiskidiego.itch.io/tank-battle" target="_blank" rel="noopener noreferrer">Download</a>
-                                  </span>
-                                  <span class="white-button">
-                                      <a href="https://github.com/kiskidiego/TankBattle" target="_blank" rel="noopener noreferrer">Source</a>
+                                      <a href="https://github.com/kiskidiego/Fitoon" target="_blank" rel="noopener noreferrer">Source</a>
                                   </span>
                               </div>
                           </div>
