--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                       </div>
                       <div class="col-md-6">
                           <div class="right-image">
-                              <img src="assets/images/tankbattle-screencap.PNG" alt="" />
+                              <img src="assets/images/fitoon-screencap.jpg" alt="" />
                           </div>
                       </div>
                   </div>
