--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                           <div class="left-text">
                               <h4>Fitoons</h4>
                               <h5>Unity, C#, Team Project, Internship, Multiplayer System, Motion Capture</h5>
-                              <h6>10/2024</h6>
+                              <h6>4/2025</h6>
                               <p>
-                                  This is the project I wworked on during my internship at the Institue of New Imaging Technologies at Jaume I University.
+                                  This is the project I worked on during my internship at the Institue of New Imaging Technologies at Jaume I University.
                                   It's a multiplayer racing game where players control a character using motion capture while running on a treadmill.
                                   The game is designed to be played in a gym, and the goal is to promote physical activity and healthy habits.
                                   I was in charge of the multiplayer system, which was implemented using Fish Networking.
