--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -4,6 +4,7 @@
 
 </head>
 <body>
+<p>Test</p>
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
 	<script src="Libraries/ammo.js"></script>
 	<script src="Libraries/math.js"></script>
