--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -20,5 +20,8 @@
 	<script type="module/text/javascript" src="Engine/Physics.js"></script>
 	<script type="module/text/javascript" src="Engine/Engine.js"></script>
 	<script type="module/text/javascript" src="main.js"></script>
+ <script>
+console.log("Holle");
+</script> 
 </body>
 </html>
