a ver si esto va

--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -8,17 +8,17 @@
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
 	<script src="Libraries/ammo.js"></script>
 	<script src="Libraries/math.js"></script>
-	<script type="module/text/javascript" src="Core/Scene.js"></script>
-	<script type="module/text/javascript" src="Core/Game.js"></script>
-	<script type="module/text/javascript" src="Core/Actor.js"></script>
+	<script type="module" src="Core/Scene.js"></script>
+	<script type="module" src="Core/Game.js"></script>
+	<script type="module" src="Core/Actor.js"></script>
 	<script src="Core/Utils.js"></script>
 	<script src="Enums/ColliderTypes.js"></script>
 	<script src="Enums/PerspectiveTypes.js"></script>
 	<script src="Enums/PhysicsModes.js"></script>
-	<script type="module/text/javascript" src="Engine/FileLoader.js"></script>
-	<script type="module/text/javascript" src="Engine/Renderer.js"></script>
-	<script type="module/text/javascript" src="Engine/Physics.js"></script>
-	<script type="module/text/javascript" src="Engine/Engine.js"></script>
-	<script type="module/text/javascript" src="main.js"></script>
+	<script type="module" src="Engine/FileLoader.js"></script>
+	<script type="module" src="Engine/Renderer.js"></script>
+	<script type="module" src="Engine/Physics.js"></script>
+	<script type="module" src="Engine/Engine.js"></script>
+	<script type="module" src="main.js"></script>
 </body>
 </html>
