--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -6,19 +6,12 @@
 <body>
 <p>Test</p>
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
-	<script src="Libraries/ammo.js"></script>
-	<script src="Libraries/math.js"></script>
-	<script type="module" src="Core/Scene.js"></script>
-	<script type="module" src="Core/Game.js"></script>
-	<script type="module" src="Core/Actor.js"></script>
-	<script src="Core/Utils.js"></script>
-	<script src="Enums/ColliderTypes.js"></script>
-	<script src="Enums/PerspectiveTypes.js"></script>
-	<script src="Enums/PhysicsModes.js"></script>
-	<script type="module" src="Engine/FileLoader.js"></script>
-	<script type="module" src="Engine/Renderer.js"></script>
-	<script type="module" src="Engine/Physics.js"></script>
-	<script type="module" src="Engine/Engine.js"></script>
+	<script type="importmap">
+	{
+		"imports": {
+			"three": "https://unpkg.com/three/build/three.module.js"
+		}
+	}</script>
 	<script type="module" src="main.js"></script>
 </body>
 </html>
