--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -9,7 +9,8 @@
 	<script type="importmap">
 	{
 		"imports": {
-			"three": "https://unpkg.com/three/build/three.module.js"
+			"three": "https://unpkg.com/three/build/three.module.js",
+			"three/": "https://unpkg.com/three@0.156.0/"
 		}
 	}</script>
 	<script type="module" src="main.js"></script>
