--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -10,7 +10,8 @@
 	{
 		"imports": {
 			"three": "https://unpkg.com/three/build/three.module.js",
-			"three/": "https://unpkg.com/three@0.156.0/"
+			"three/": "https://unpkg.com/three@0.156.0/",
+			"howler": "https://unpkg.com/howler@2.2.3/dist/howler.core.min.js",
 		}
 	}</script>
 	<script type="module" src="main.js"></script>
