--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -11,7 +11,7 @@
 		"imports": {
 			"three": "https://unpkg.com/three/build/three.module.js",
 			"three/": "https://unpkg.com/three@0.156.0/",
-			"howler": "https://unpkg.com/howler@2.2.3/dist/howler.core.min.js",
+			"howler": "https://unpkg.com/howler@2.2.3/dist/howler.core.min.js"
 		}
 	}</script>
 	<script type="module" src="main.js"></script>
