probando importar howl

--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -14,6 +14,7 @@
 			"howler": "https://unpkg.com/howler@2.2.3/dist/howler.core.min.js"
 		}
 	}</script>
+	<script src="Libraries/howler.min.js"></script>
 	<script type="module" src="main.js"></script>
 </body>
 </html>
