--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -10,7 +10,7 @@
 	{
 		"imports": {
 			"three": "https://unpkg.com/three/build/three.module.js",
-			"three/": "https://unpkg.com/three@0.156.0/",
+			"three/": "https://unpkg.com/three@0.156.0/"
 		}
 	}</script>
 	<script src="Libraries/howler.min.js"></script>
