--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -12,8 +12,7 @@
 			"three": "https://unpkg.com/three/build/three.module.js",
 			"three/": "https://unpkg.com/three@0.156.0/"
 		}
-	}
-	</script>
+	}</script>
 	<script src="Libraries/howler.min.js"></script>
 	<script type="module" src="main.js"></script>
 </body>
