--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -4,14 +4,7 @@
 
 </head>
 <body>
-<p>Test</p>
-<meta http-equiv='cache-control' content='no-cache'> 
-
-
-<meta http-equiv='expires' content='0'> Add commentMore actions
-
-
-<meta http-equiv='pragma' content='no-cache'>
+<p>Test 2</p>
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
 	<script type="importmap">
 	{
