--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -14,7 +14,10 @@
 		}
 	}</script>
 	<script src="Libraries/howler.min.js"></script>
-	
+	<script src="Enums/ColliderTypes.js"></script>
+	<script src="Enums/InputModes.js"></script>
+	<script src="Enums/PerspectiveTypes.js"></script>
+	<script src="Enums/PhysicsModes.js"></script>
 	<script type="module" src="main.js"></script>
 </body>
 </html>
