--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<p>Test 2</p>
+<p>Test</p>
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
 	<script type="importmap">
 	{
@@ -18,6 +18,7 @@
 	<script src="Enums/InputModes.js"></script>
 	<script src="Enums/PerspectiveTypes.js"></script>
 	<script src="Enums/PhysicsModes.js"></script>
+	<script src="Libraries/ammo.js"></script>
 	<script type="module" src="main.js"></script>
 </body>
 </html>
