--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -13,12 +13,13 @@
 			"three/": "https://unpkg.com/three@0.156.0/"
 		}
 	}</script>
+	<script src="Core/Utils.js"></script>
 	<script src="Libraries/howler.min.js"></script>
+	<script src="Libraries/ammo.js"></script>
 	<script src="Enums/ColliderTypes.js"></script>
 	<script src="Enums/InputModes.js"></script>
 	<script src="Enums/PerspectiveTypes.js"></script>
 	<script src="Enums/PhysicsModes.js"></script>
-	<script src="Libraries/ammo.js"></script>
 	<script type="module" src="main.js"></script>
 </body>
 </html>
