--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -16,6 +16,7 @@
 	<script src="Core/Utils.js"></script>
 	<script src="Libraries/howler.min.js"></script>
 	<script src="Libraries/ammo.js"></script>
+	<script src="Libraries/math.js"></script>
 	<script src="Enums/ColliderTypes.js"></script>
 	<script src="Enums/InputModes.js"></script>
 	<script src="Enums/PerspectiveTypes.js"></script>
