--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -4,6 +4,7 @@
 
 </head>
 <body>
+	<h1 id="start">Click on the page to start the game</h1>
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
 	<script type="importmap">
 	{
