--- a/Loop3D/index.html
+++ b/Loop3D/index.html
@@ -4,7 +4,12 @@
 
 </head>
 <body>
-	<h1 id="start">Click on the page to start the game</h1>
+	<div id="start">
+		<h1>Loop3D Demos</h1>
+		<p>Click a button to start a demo.</p>
+		<input type="button" value="Physics Demo" id="physics"/><br/>
+		<input type="button" value="Tanks Demo" id="tanks"/>
+	</div>
 	<canvas id="gameCanvas" width="800" height="600" position="fixed" top="0" left="0"></canvas>
 	<script type="importmap">
 	{
