Udated portfolio to add Loop3D and noise tunnel game

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span>
-              Hello, I am a student of Videogame Development and Design at Jaume I University, Spain.
+              Hello, I am a graduate of Videogame Development and Design at Jaume I University, Spain. Now getting my Master's dregree.
               Nice to meet you!
             </span>
           </div>
@@ -163,6 +163,85 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div class="left-text">
+                              <h4>Tunnel Game v2</h4>
+                              <h5>Godot, C#, Solo Project, Procedural Generation</h5>
+                              <h6>Ongoing</h6>
+                              <p>
+                                  This is a remake of my previous Tunnel Game project, with significant improvements in both performance and scope. 
+                                  Now it includes many more features, such as distinct biomes, each with their own unique shapes and textures, with systems implemented to be able to add and create new biomes easily.
+                                  <br><br>Player movement has also been improved, with the addition of climbing, two distinct grappling hooks and a more fluid movement system.
+                                  Additionally, now the world can be terraformed by the player, by carving holes or adding material to the cave walls.
+                                  <br><br>The project is still in development, but I am very proud of the progress made so far. Planned features include:
+                                  <ul>
+                                    <li>More biomes</li>
+                                    <li>Fauna and plant life</li>
+                                    <li>Structure generation</li>
+                                    <li>Save and load system</li>
+                                  </ul>
+                                  The final goal is to create a fully fleshed out survival game, with a focus on exploration and discovery, trying to emulate a natural alien ecosystem inside a cave planet.
+                              </p>
+                              <div>
+                                  <span class="white-button">
+                                      <a href="https://kiskidiego.itch.io/tunnel-game-v2-demo" target="_blank" rel="noopener noreferrer">Download</a>
+                                  </span>
+                                  <span class="white-button">
+                                      <a href="https://github.com/kiskidiego/Noise-Tunnel-Game" target="_blank" rel="noopener noreferrer">Source</a>
+                                  </span>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="right-image">
+                              <img src="assets/images/Cave.PNG" alt="" />
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="right-image-post">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="left-text">
+                              <h4>Loop3D</h4>
+                              <h5>Game Engine, JavaScript, Solo Project, Senior Project</h5>
+                              <h6>6/2025</h6>
+                              <p>
+                                  This is my senior project for my degree in Videogame Development and Design. It is a 3D game engine built with JavaScript, designed to be simple and light-weight.
+                                  Its main features include:
+                                  <ul>
+                                    <li>Scripting system using actions and conditions</li>
+                                    <li>Rigid body physics and collision detection</li>
+                                    <li>Scene management</li>
+                                    <li>Support for importing 3D models</li>
+                                    <li>Agent-based design paradigm</li>
+                                  </ul>
+                                  Check out the source code and demos to see Loop3D in action!
+                                  You can read more about the project in the memoir.
+                              </p>
+                              <div>
+                                  <span class="white-button">
+                                      <a href="https://github.com/kiskidiego/Loop3D" target="_blank" rel="noopener noreferrer">Source</a>
+                                  </span>
+                                  <span class="white-button">
+                                      <a href="./Loop3D/index.html" target="_blank" rel="noopener noreferrer">Demos</a>
+                                  </span>
+                                  <span class="white-button">
+                                      <a href="./Memoria_TFG_Diego_Pérez_Rueda.pdf" target="_blank" rel="noopener noreferrer">Memoir</a>
+                                  </span>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="right-image">
+                              <img src="assets/images/TankDemo.PNG" alt="" />
+                              <p>This is a demo implemented in Loop3D, based on Unity's <i>Tanks</i>.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="right-image-post">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="left-text">
                               <h4>Fitoons</h4>
                               <h5>Unity, C#, Team Project, Internship, Multiplayer System, Motion Capture</h5>
                               <h6>4/2025</h6>
@@ -172,7 +251,7 @@
                                   The game is designed to be played in a gym, and the goal is to promote physical activity and healthy habits.
                                   I was in charge of the multiplayer system, which was implemented using Fish Networking.
                                   Below is a forked version of the project, which is the one I worked on.
-                                  <br><i>(Note: The game is not available for download yet, as it is still in development)</i>
+                                  <br><i>(Note: The game is not available for download)</i>
                               </p>
                               <div>
                                   <span class="white-button">
