--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                       <div class="col-md-6">
                           <div class="left-text">
                               <h4>Loop3D</h4>
-                              <h5>Game Engine, JavaScript, Solo Project, Senior Project</h5>
+                              <h5>No Engine, JavaScript, Solo Project, Senior Project, Game Engine</h5>
                               <h6>6/2025</h6>
                               <p>
                                   This is my senior project for my degree in Videogame Development and Design. It is a 3D game engine built with JavaScript, designed to be simple and light-weight.
