--- a/index.html
+++ b/index.html
@@ -271,6 +271,33 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div class="left-text">
+                              <h4>K-Boom Demo</h4>
+                              <h5>Unity, C#, Team Project, Game Jam, Puzzle Game, Level Design</h5>
+                              <h6>2/2025</h6>
+                              <p>
+                                  This project was made as an entry for UJI Game Jam 2025 by the team BackToBits, which I am part of. I was in charge of implementing the game logic and designing the levels.
+                                  The game is a puzzle game where the player must use bombs to manipulate the environment and reach the goal. It has 10 levels, including 3 tutorial levels.
+                                  We plan to continue developing the game and eventually release it commercially on Steam.
+                                  <br><i>(Note: The game source is not publicly available)</i>
+                              </p>
+                              <div>
+                                  <span class="white-button">
+                                      <a href="https://kiskidiego.itch.io/k-boom" target="_blank" rel="noopener noreferrer">Download</a>
+                                  </span>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-md-6">
+                          <div class="right-image">
+                              <img src="assets/images/KBoom.png" alt="" />
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="right-image-post">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <div class="left-text">
                               <h4>Tank Battle</h4>
                               <h5>Unity, C#, Solo project, University Assignment, Multiplayer System</h5>
                               <h6>10/2024</h6>
