fixed sidebar css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </ul>
             </nav>
             <div class="social-network">
-              <ul class="soial-icons">
+              <ul class="social-icons">
                 <li>
                   <a href="https://kiskidiego.itch.io/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-itch-io"></i></a>
                   <a href="https://github.com/kiskidiego" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
