--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div class="left-text">
-                              <h4>Tunnel Game v2</h4>
+                              <h4>Abyssalis</h4>
                               <h5>Godot, C#, Solo Project, Procedural Generation</h5>
                               <h6>Ongoing</h6>
                               <p>
