--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                               </p>
                               <div>
                                   <span class="white-button">
-                                      <a href="https://kiskidiego.itch.io/tunnel-game-v2-demo" target="_blank" rel="noopener noreferrer">Download</a>
+                                      <a href="https://kiskidiego.itch.io/abyssalis" target="_blank" rel="noopener noreferrer">Download</a>
                                   </span>
                                   <span class="white-button">
                                       <a href="https://github.com/kiskidiego/Noise-Tunnel-Game" target="_blank" rel="noopener noreferrer">Source</a>
