--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                               <h5>Godot, C#, Solo Project, Procedural Generation</h5>
                               <h6>Ongoing</h6>
                               <p>
-                                  This is a remake of my previous Tunnel Game project, with significant improvements in both performance and scope. 
+                                  This this work expands upon my previous Tunnel Game project, with significant improvements in both performance and scope. 
                                   Now it includes many more features, such as distinct biomes, each with their own unique shapes and textures, with systems implemented to be able to add and create new biomes easily.
                                   <br><br>Player movement has also been improved, with the addition of climbing, two distinct grappling hooks and a more fluid movement system.
                                   Additionally, now the world can be terraformed by the player, by carving holes or adding material to the cave walls.
