Added second photo

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                       <div class="col-md-6">
                           <div class="right-image">
                               <img src="assets/images/Cave.PNG" alt="" />
+                              <img src="assets/images/Cave2.PNG" alt="" style="margin-top: 30px;" />
                           </div>
                       </div>
                   </div>
