--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/icon.png" alt="" /></a>
+              <a href="#"><img src="assets/images/icon.png" alt="" style="
+                image-rendering: optimizeSpeed;
+                image-rendering: crisp-edges;
+                image-rendering: -moz-crisp-edges;
+                image-rendering: -o-crisp-edges;
+                image-rendering: -webkit-optimize-contrast;
+                -ms-interpolation-mode: nearest-neighbor;"
+                /></a>
             </div>
             <div class="author-content">
               <h4>Diego Pérez Rueda</h4>
